--- a/untitled.html
+++ b/untitled.html
@@ -1,1 +1,1 @@
-<div class="placeholder-text">Double-click this text to start writing.</div>
+<div>I can start writing <b>anything I like</b>. This is a rich text editor so I can&nbsp;<b>bold</b> or&nbsp;<i>italic</i> content<br></div>
