--- a/33_On_the_other_hand__.html
+++ b/33_On_the_other_hand__.html
@@ -1,4 +1,4 @@
-<div>[33] On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue <cite class="squire-citation ltx_cite" data-bib-text="@article{26501192,
+<div>[33] On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue <cite class="ltx_cite" data-bib-text="@article{26501192,
   title = {Genome-wide identification of microRNAs regulating cholesterol and triglyceride homeostasis.},
   date = {2015 Nov},
   source = {Nat Med},
@@ -12,4 +12,18 @@
   pages = {1290-7},
   pubmed_id = {26501192},
 }
-" data-bib-key="26501192" contenteditable="false" style="cursor: pointer"><a class="au-cite-link" href="#26501192">Wagschal 2015</a></cite>; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammeled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.<br></div>
+" data-bib-key="26501192" contenteditable="false"><a href="#26501192">Wagschal 2015</a></cite>; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammeled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided <cite class="squire-citation ltx_cite" data-bib-text="@article{27019418,
+  title = {Are Retail Outlets Complying with National Legislation to Protect Children from Exposure to Tobacco Displays at Point of Sale? Results from the First Compliance Study in the UK.},
+  date = {2016},
+  source = {PLoS One},
+  authors = {Eadie, D and Stead, M and MacKintosh, AM and Murray, S and Best, C and Pearce, J and Tisch, C and van, der Sluijs W and Amos, A and MacGregor, A and Haw, S},
+  author = {Eadie, D and Stead, M and MacKintosh, AM and Murray, S and Best, C and Pearce, J and Tisch, C and van, der Sluijs W and Amos, A and MacGregor, A and Haw, S},
+  year = {2016},
+  month = {},
+  journal = {PLoS One},
+  volume = {11},
+  number = {},
+  pages = {e0152178},
+  pubmed_id = {27019418},
+}
+" data-bib-key="27019418" contenteditable="false" style="cursor: pointer"><a class="au-cite-link" href="#27019418">Eadie 2016</a></cite>. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.<br></div>
