--- a/But_I_must_explain_to__.html
+++ b/But_I_must_explain_to__.html
@@ -1,4 +1,17 @@
-<div>But I must explain to you how all this mistaken idea of denouncing of a pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, <b>the master-builder of human happiness</b>. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful <cite class="squire-citation ltx_cite" data-bib-text="@article{Fernando_2007,
+<div>But I must explain to you how all this mistaken idea of denouncing of a pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, <b>the master-builder of human happiness</b>. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally <cite class="squire-citation ltx_cite" data-bib-text="@article{Pepe_2012,
+	doi = {10.1371/journal.pone.0046428},
+	url = {http://dx.doi.org/10.1371/journal.pone.0046428},
+	year = 2012,
+	month = {nov},
+	publisher = {Public Library of Science ({PLoS})},
+	volume = {7},
+	number = {11},
+	pages = {e46428},
+	author = {Alberto Pepe and Michael J. Kurtz},
+	editor = {Howard Browman},
+	title = {A Measure of Total Research Impact Independent of Time and Discipline},
+	journal = {{PLoS} {ONE}}
+}" data-bib-key="Pepe_2012" contenteditable="false" style="cursor: pointer"><a class="au-cite-link" href="#Pepe_2012">Pepe 2012</a></cite>encounter consequences that are extremely painful <cite class="ltx_cite" data-bib-text="@article{Fernando_2007,
 	doi = {10.1016/j.clim.2007.03.462},
 	url = {http://dx.doi.org/10.1016/j.clim.2007.03.462},
 	year = 2007,
@@ -8,4 +21,4 @@
 	author = {Michelle Fernando and Christine Stevens and Emily Walsh and Todd Green and Pardis Sabeti and John Rioux and Tim Vyse},
 	title = {Independent Signals Within the {MHC} are Associated with Systemic Lupus Erythematosus{\textemdash}A Family-based {SNP} Study},
 	journal = {Clinical Immunology}
-}" data-bib-key="Fernando_2007" contenteditable="false" style="cursor: pointer"><a class="au-cite-link" href="#Fernando_2007">Fernando 2007</a></cite>. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?<br></div>
+}" data-bib-key="Fernando_2007" contenteditable="false"><a href="#Fernando_2007">Fernando 2007</a></cite>. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?<br></div>
