--- a/33_On_the_other_hand__.html
+++ b/33_On_the_other_hand__.html
@@ -12,7 +12,21 @@
   pages = {1290-7},
   pubmed_id = {26501192},
 }
-" data-bib-key="26501192" contenteditable="false"><a href="#26501192">Wagschal 2015</a></cite>; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammeled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided <cite class="squire-citation ltx_cite" data-bib-text="@article{27019418,
+" data-bib-key="26501192" contenteditable="false"><a href="#26501192">Wagschal 2015</a></cite>; and equal blame belongs <cite class="squire-citation ltx_cite" data-bib-text="@article{26991501,
+  title = {Transforming Clinical Data into Actionable Prognosis Models: Machine-Learning Framework and Field-Deployable App to Predict Outcome of Ebola Patients.},
+  date = {2016 Mar},
+  source = {PLoS Negl Trop Dis},
+  authors = {Colubri, A and Silver, T and Fradet, T and Retzepi, K and Fry, B and Sabeti, P},
+  author = {Colubri, A and Silver, T and Fradet, T and Retzepi, K and Fry, B and Sabeti, P},
+  year = {2016},
+  month = {Mar},
+  journal = {PLoS Negl Trop Dis},
+  volume = {10},
+  number = {},
+  pages = {e0004549},
+  pubmed_id = {26991501},
+}
+" data-bib-key="26991501" contenteditable="false" style="cursor: pointer"><a class="au-cite-link" href="#26991501">Colubri 2016</a></cite>&nbsp;to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammeled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided <cite class="ltx_cite" data-bib-text="@article{27019418,
   title = {Are Retail Outlets Complying with National Legislation to Protect Children from Exposure to Tobacco Displays at Point of Sale? Results from the First Compliance Study in the UK.},
   date = {2016},
   source = {PLoS One},
@@ -26,4 +40,4 @@
   pages = {e0152178},
   pubmed_id = {27019418},
 }
-" data-bib-key="27019418" contenteditable="false" style="cursor: pointer"><a class="au-cite-link" href="#27019418">Eadie 2016</a></cite>. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.<br></div>
+" data-bib-key="27019418" contenteditable="false"><a href="#27019418">Eadie 2016</a></cite>. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.<br></div>
