--- a/figures/leafdamage1/caption.html
+++ b/figures/leafdamage1/caption.html
@@ -1,1 +1,1 @@
-Replace this text with your caption
+<div>Symptoms of foliar nematodes on chrysanthemum. Foliar nematodes have relatively short life cycles going from egg to adult in approximately 2 weeks. Females can produce large numbers of eggs, so symptoms can occur and spread fairly rapidly.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></div>
