--- a/figures/leafdamage1/caption.html
+++ b/figures/leafdamage1/caption.html
@@ -1,4 +1,4 @@
-<div><b>Symptoms of foliar nematodes on chrysanthemum.</b> Foliar nematodes have relatively short life cycles going from egg to adult in approximately 2 weeks. Females can produce large numbers of eggs, so symptoms can occur and spread fairly rapidly as noted in&nbsp;<i>Small worms, big ideas: evolutionary inferences from nematode DNA</i> <cite class="squire-citation ltx_cite" data-bib-text="@article{Bik_2009,
+<div><b>Symptoms of foliar nematodes on chrysanthemum.</b> Foliar nematodes have relatively short life cycles going from egg to adult in approximately 2 weeks. Females can produce large numbers of eggs, so symptoms can occur and spread fairly rapidly as noted in&nbsp;<i>Small worms, big ideas: evolutionary inferences from nematode DNA</i>&nbsp;(<cite class="ltx_cite" data-bib-text="@article{Bik_2009,
 	doi = {10.1111/j.1365-2699.2009.02219.x},
 	url = {http://dx.doi.org/10.1111/j.1365-2699.2009.02219.x},
 	year = 2009,
@@ -11,4 +11,4 @@
 	title = {Small worms,
 big ideas: evolutionary inferences from nematode {DNA}},
 	journal = {Journal of Biogeography}
-}" data-bib-key="Bik_2009" contenteditable="false" style="cursor: pointer"><a class="au-cite-link" href="#Bik_2009">Bik 2009</a></cite><br></div>
+}" data-bib-key="Bik_2009" contenteditable="false"><a href="#Bik_2009">Bik 2009</a></cite>)</div>
