--- a/figures/leafdamage1/caption.html
+++ b/figures/leafdamage1/caption.html
@@ -1,14 +1,1 @@
-<div><b>Symptoms of foliar nematodes on chrysanthemum.</b> Foliar nematodes have relatively short life cycles going from egg to adult in approximately 2 weeks. Females can produce large numbers of eggs, so symptoms can occur and spread fairly rapidly as noted in&nbsp;<i>Small worms, big ideas: evolutionary inferences from nematode DNA</i>&nbsp;(<cite class="ltx_cite" data-bib-text="@article{Bik_2009,
-	doi = {10.1111/j.1365-2699.2009.02219.x},
-	url = {http://dx.doi.org/10.1111/j.1365-2699.2009.02219.x},
-	year = 2009,
-	month = {aug},
-	publisher = {Wiley-Blackwell},
-	volume = {37},
-	number = {1},
-	pages = {1--2},
-	author = {Holly M. Bik},
-	title = {Small worms,
-big ideas: evolutionary inferences from nematode {DNA}},
-	journal = {Journal of Biogeography}
-}" data-bib-key="Bik_2009" contenteditable="false"><a href="#Bik_2009">Bik 2009</a></cite>)</div>
+<div><b>Symptoms of foliar nematodes on chrysanthemum.</b> Foliar nematodes have relatively short life cycles going from egg to adult in approximately 2 weeks. Females can produce large numbers of eggs, so symptoms can occur and spread fairly rapidly. For a literature review, cf. Bik et al. Small<br></div><div>worms big ideas: evolutionary inferences from nematode DNA. <i>Journal of Biogeography</i>, 37(1):2009.<br></div><div>doi: 10.1111/j.1365-2699.2009.02219.x<br></div>
